fix the modal and the fix bottom player on mobile and add animation

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,3 +27,27 @@ a {
 a:hover{
   color: var(--primary);
 }
+
+@keyframes genie-in {
+  0% {
+    transform: scaleY(0.4) scaleX(0.4) translateY(100%);
+    opacity: 0;
+    border-radius: 100%;
+  }
+  100% {
+    transform: scaleY(1) scaleX(1) translateY(0);
+    opacity: 1;
+    border-radius: 0.5rem;
+  }
+}
+
+@keyframes genie-out {
+  0% {
+    transform: scaleY(1) scaleX(1) translateY(0);
+    opacity: 1;
+  }
+  100% {
+    transform: scaleY(0.4) scaleX(0.4) translateY(100%);
+    opacity: 0;
+  }
+}
